prevent horizontal scroll on mobile devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -214,6 +214,9 @@
     @apply border-border outline-ring/50;
     font-family: var(--font-figtree);
   }
+  html,body {
+    @apply overflow-x-hidden;
+  }
   body {
     @apply bg-background text-foreground;
   }
